--- a/fig.yml
+++ b/fig.yml
@@ -1,5 +1,7 @@
 db:
   image: postgres
+  volumes:
+    - ./volumes/data:/var/lib/postgresql/data
   environment:
     - POSTGRES_PASSWORD=fake_password
 web:
