--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Minimal requirements
-Django>=1.7,<1.8
-wagtail==0.8.4
+Django==1.8.2
+wagtail==1.0b2
 
 # Recommended components (require additional setup):
 psycopg2==2.5.4
