--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Minimal requirements
 Django==1.8.2
 wagtail==1.0b2
+wagtailapi==1.0rc3
 
 # Recommended components (require additional setup):
 # psycopg2==2.5.4
