--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 db:
   image: postgres
   environment:
-    - POSTGRES_PASSWORD=civea_shapes
+    - POSTGRES_PASSWORD=100shapes_shapes
   volumes:
     - /var/lib/postgresql/data
 web:
   build: .
-  # command: python manage.py runserver 0.0.0.0:8000
+  environment:
+    - SECRET='temp-key'
   ports:
     - "80:80"
   volumes:
