--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 Django==1.8.2
 wagtail==1.0b2
 wagtailapi==1.0rc3
+django-cors-headers==1.1.0
 
 # Recommended components (require additional setup):
 # psycopg2==2.5.4
