increase max upload size in nginx to 10m

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,8 @@
 server {
     listen 80 default_server;
     server_name _;
+    client_max_body_size 10m;
     root /home/app/public;
     passenger_enabled on;
-    passenger_user app;   
+    passenger_user app;
 }
