added and fixed dockerfile

--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "100shapes-hapi-content",
   "version": "0.0.1",
   "description": "A Hapi server to serve our YML content",
-  "main": "server.js",
+  "main": "app.js",
   "dependencies": {
     "hapi": "^8.8.0",
     "lodash": "^3.10.0",
-    "yaml-to-json": "^0.3.0"
+    "metalsmith": "^1.6.0",
+    "metalsmith-html-minifier": "^1.1.0",
+    "metalsmith-ignore": "^0.1.2",
+    "metalsmith-paths": "^2.0.1",
+    "metalsmith-prefixoid": "0.0.3",
+    "metalsmith-slug": "0.0.5"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
