fixed image hosting, replaced prefixoid

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80 default_server;
     server_name _;
-    root /home/app/public;
+    root /home/app/public/;
     passenger_enabled on;
 }
