--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Hapi server to serve our YML content",
   "main": "app.js",
   "dependencies": {
+    "MD5": "^1.3.0",
     "cheerio": "^0.19.0",
     "hapi": "^8.8.0",
     "joi": "^6.6.1",
@@ -11,7 +12,10 @@
     "metalsmith": "^1.6.0",
     "metalsmith-html-minifier": "^1.1.0",
     "metalsmith-ignore": "^0.1.2",
-    "metalsmith-paths": "^2.0.1"
+    "metalsmith-paths": "^2.0.1",
+    "rss": "^1.1.1",
+    "sitemap": "^0.9.0",
+    "xml": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
