--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-paths": "^2.0.1",
     "rss": "^1.1.1",
-    "sitemap": "^0.9.0",
-    "xml": "^1.0.0"
+    "sitemap": "^0.9.0"
   },
   "devDependencies": {},
   "scripts": {
