--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "API"
   ],
   "author": "Paolo Memoli",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/100Shapes/100Shapes.com-content-API/issues"
   },
