--- a/package.json
+++ b/package.json
@@ -4,26 +4,24 @@
   "description": "A Hapi server to serve our YML content",
   "main": "app.js",
   "dependencies": {
-    "md5": "^2.0.0",
     "cheerio": "^0.19.0",
     "hapi": "^8.8.0",
     "joi": "^6.6.1",
     "lodash": "^3.10.0",
+    "md5": "^2.0.0",
     "metalsmith": "^1.6.0",
     "metalsmith-html-minifier": "^1.1.0",
     "metalsmith-ignore": "^0.1.2",
     "metalsmith-paths": "^2.0.1",
     "rss": "^1.1.1",
-    "sitemap": "^0.9.0"
+    "sitemap": "^0.9.0",
+    "typeset": "^0.1.4"
   },
-  "scripts": {
-    "start": "node app.js"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/100Shapes/100Shapes.com-content-API.git"
