Compressed images in build step

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "metalsmith-imagemin": "^1.1.3"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/100Shapes/100Shapes.com-content-API.git"
